--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js"
-  },
+    "start": "./node_modules/.bin/nodemon -L server/index.js"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hungle2911/todolist_pern.git"
