--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/nodemon -L server/index.js"
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hungle2911/todolist_pern.git"
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Hungle2911/todolist_pern#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.11.5"
   },
