--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,6 @@
 # cp .env.example .env
 DB_HOST=localhost
-DB_USER=xxxx
-DB_PASS=xxxxx
+DB_USER=williamlee
+DB_PASS=development
 DB_NAME=perntodo
 DB_PORT=5432
